Corrected typo in wandb project name

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -30,7 +30,7 @@
         "id": "TRwBqsxQoczw"
       },
       "source": [
-        "!pip install wandb\r\n"
+        "!pip install wandb"
       ],
       "execution_count": null,
       "outputs": []
@@ -62,7 +62,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FR9kody_ugWW"
+        "id": "-F9ygxnE_ctp"
       },
       "source": [
         "from keras.datasets import fashion_mnist\r\n",
@@ -71,13 +71,12 @@
         "label = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\r\n",
         "               'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\r\n",
         "for i in range(10):\r\n",
-        "   wandb.init(project=\"cs6910-assingment01\")\r\n",
+        "   wandb.init(project=\"cs6910-assignment01\")\r\n",
         "   wandb.run.name = \"Q1_run_{}\".format(i+1)\r\n",
         "   for j in range(30):\r\n",
         "     if y_train[j] == i:\r\n",
         "       wandb.log({\"examples\": [wandb.Image(X_train[j], caption=label[i])]})\r\n",
-        "       break\r\n",
-        "\r\n"
+        "       break"
       ],
       "execution_count": null,
       "outputs": []
