Defined activation functions

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -80,6 +80,39 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3thNIX-cOIA3"
+      },
+      "source": [
+        "import numpy as np\r\n",
+        "\r\n",
+        "def logist_func(z):\r\n",
+        "  g = 1/(1+np.exp(-z))\r\n",
+        "  return g\r\n",
+        "\r\n",
+        "def tanh(z):\r\n",
+        "  g = np.tanh(z)\r\n",
+        "  return g\r\n",
+        "\r\n",
+        "def relu(z):\r\n",
+        "  return np.maximum(0,z)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TXeouW-aXGsb"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
