defined initializer functions

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -109,6 +109,26 @@
         "id": "TXeouW-aXGsb"
       },
       "source": [
+        "def initialize(initializer, size1, size2):\r\n",
+        "  if(initializer == \"random\"):\r\n",
+        "     W = np.random.randn(size1, size2)\r\n",
+        "     return W\r\n",
+        "\r\n",
+        "  if(initializer == \"Xavier\"):\r\n",
+        "     W = np.random.randn(size1, size2) * np.sqrt(1/size2)\r\n",
+        "     return W\r\n",
+        "\r\n",
+        "  print(\"Enter the name of initializer correctly\")"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n6P2Su_1dv30"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
