Forward Propagation functions done

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -82,6 +82,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5DMgxgi4PRGt"
+      },
+      "source": [
+        "# Question 2 (10 Marks)\r\n",
+        "\r\n",
+        "Implement a feedforward neural network which takes images from the fashion-mnist data as input and outputs a probability distribution over the 10 classes.\r\n",
+        "\r\n",
+        "Your code should be flexible so that it is easy to change the number of hidden layers and the number of neurons in each hidden layer."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3thNIX-cOIA3"
@@ -89,7 +102,7 @@
       "source": [
         "import numpy as np\r\n",
         "\r\n",
-        "def logist_func(z):\r\n",
+        "def sigmoid(z):\r\n",
         "  g = 1/(1+np.exp(-z))\r\n",
         "  return g\r\n",
         "\r\n",
@@ -100,7 +113,7 @@
         "def relu(z):\r\n",
         "  return np.maximum(0,z)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +133,7 @@
         "\r\n",
         "  print(\"Enter the name of initializer correctly\")"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +142,71 @@
         "id": "n6P2Su_1dv30"
       },
       "source": [
-        ""
+        "def activation_forward(A, W, b,activation):\r\n",
+        "  Z = np.dot(W, A) + b \r\n",
+        "  if activation == 'relu':\r\n",
+        "    Z = relu(Z)\r\n",
+        "  elif activation == 'sigmoid':\r\n",
+        "    Z = sigmoid(Z)\r\n",
+        "  elif activation =='tanh':\r\n",
+        "    Z = tanh(Z)\r\n",
+        "  elif activation == 'softmax':\r\n",
+        "    Z = softmax(Z)\r\n",
+        "  elif activation == 'linear':\r\n",
+        "\r\n",
+        "\r\n",
+        "  return Z"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C_qU08dQy3f5"
+      },
+      "source": [
+        "def softmax(x):\r\n",
+        "  return np.exp(x)/np.sum(np.exp(x), axis = 0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d5G0xesxx_jq"
+      },
+      "source": [
+        "def forward_propogation(X, Wb_matrix):\r\n",
+        "    A = X\r\n",
+        "    L = len(Wb_matrix) \r\n",
+        "    for l in range(1, L):\r\n",
+        "        A_prev = A \r\n",
+        "        A = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation='sigmoid')\r\n",
+        "    AL = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')    \r\n",
+        "    return AL"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6zXc1-js-dgL"
+      },
+      "source": [
+        "def initialize_Wb_matrix(layer_dims):\r\n",
+        "        \r\n",
+        "    np.random.seed(3)\r\n",
+        "    Wb_matrix = {}\r\n",
+        "    L = len(layer_dims)            # number of layers in the network\r\n",
+        "\r\n",
+        "    for l in range(1, L):\r\n",
+        "        Wb_matrix['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1])\r\n",
+        "        Wb_matrix['b' + str(l)] = np.zeros((layer_dims[l], 1))\r\n",
+        "    \r\n",
+        "    return Wb_matrix"
       ],
       "execution_count": null,
       "outputs": []
