Completed forward propagation code

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -113,7 +113,19 @@
         "def relu(z):\r\n",
         "  return np.maximum(0,z)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C_qU08dQy3f5"
+      },
+      "source": [
+        "def softmax(x):\r\n",
+        "  return np.exp(x)/np.sum(np.exp(x), axis = 0)"
+      ],
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -133,7 +145,7 @@
         "\r\n",
         "  print(\"Enter the name of initializer correctly\")"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -142,50 +154,33 @@
         "id": "n6P2Su_1dv30"
       },
       "source": [
-        "def activation_forward(A, W, b,activation):\r\n",
+        "def linear_forward(A, W, b, activation):\r\n",
         "  Z = np.dot(W, A) + b \r\n",
+        "  cache = (A, W, b)\r\n",
+        "\r\n",
+        "  return Z, cache"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t7zsskSyU1ZO"
+      },
+      "source": [
+        "def activation_forward(A_prev, W, b, activation):\r\n",
+        "  Z, linear_cache = linear_forward(A_prev, W, b)\r\n",
+        "  activation_cache = Z \r\n",
         "  if activation == 'relu':\r\n",
-        "    Z = relu(Z)\r\n",
+        "    A = relu(Z)\r\n",
         "  elif activation == 'sigmoid':\r\n",
-        "    Z = sigmoid(Z)\r\n",
+        "    A = sigmoid(Z)\r\n",
         "  elif activation =='tanh':\r\n",
-        "    Z = tanh(Z)\r\n",
+        "    A = tanh(Z)\r\n",
         "  elif activation == 'softmax':\r\n",
-        "    Z = softmax(Z)\r\n",
-        "  elif activation == 'linear':\r\n",
-        "\r\n",
-        "\r\n",
-        "  return Z"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "C_qU08dQy3f5"
-      },
-      "source": [
-        "def softmax(x):\r\n",
-        "  return np.exp(x)/np.sum(np.exp(x), axis = 0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d5G0xesxx_jq"
-      },
-      "source": [
-        "def forward_propogation(X, Wb_matrix):\r\n",
-        "    A = X\r\n",
-        "    L = len(Wb_matrix) \r\n",
-        "    for l in range(1, L):\r\n",
-        "        A_prev = A \r\n",
-        "        A = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation='sigmoid')\r\n",
-        "    AL = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')    \r\n",
-        "    return AL"
+        "    A = softmax(Z)\r\n",
+        "  return A, activation_cache"
       ],
       "execution_count": null,
       "outputs": []
@@ -196,17 +191,73 @@
         "id": "6zXc1-js-dgL"
       },
       "source": [
-        "def initialize_Wb_matrix(layer_dims):\r\n",
+        "def initialize_Wb_matrix(layer_dims, initializer):\r\n",
         "        \r\n",
         "    np.random.seed(3)\r\n",
         "    Wb_matrix = {}\r\n",
         "    L = len(layer_dims)            # number of layers in the network\r\n",
         "\r\n",
         "    for l in range(1, L):\r\n",
-        "        Wb_matrix['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l-1])\r\n",
+        "        Wb_matrix['W' + str(l)] = initializer(layer_dims[l], layer_dims[l-1])\r\n",
         "        Wb_matrix['b' + str(l)] = np.zeros((layer_dims[l], 1))\r\n",
         "    \r\n",
         "    return Wb_matrix"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DITldZOSHNt2"
+      },
+      "source": [
+        "def L_layer_model(X, Wb_matrix, activation):\r\n",
+        "    A = X\r\n",
+        "    L = len(Wb_matrix) // 2\r\n",
+        "    caches = []\r\n",
+        "\r\n",
+        "    for l in range(1, L):\r\n",
+        "        A_prev = A \r\n",
+        "        A, cache = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation)\r\n",
+        "        caches.append(cache)\r\n",
+        "\r\n",
+        "    AL, cache = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')\r\n",
+        "    caches.append(cache)\r\n",
+        "\r\n",
+        "    return AL, caches"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "83_rbLFKN4et"
+      },
+      "source": [
+        "def forward_propagation(X, num_hidden, size_hidden, initializer, activation):\r\n",
+        "\r\n",
+        "  layer_dims = [X.shape(0)]\r\n",
+        "  for l in range(1, num_hidden):\r\n",
+        "    layer_dims.append(size_hidden)\r\n",
+        "  layer_dims.append(10)\r\n",
+        "  \r\n",
+        "  Wb_matrix = initialize_Wb_matrix(layer_dims, initializer)\r\n",
+        "  AL, caches = L_layer_model(X, Wb_matrix, activation)\r\n",
+        "\r\n",
+        "  return AL, caches"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lXeoLIx6SVwB"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
