--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -198,7 +198,7 @@
         "    L = len(layer_dims)            # number of layers in the network\r\n",
         "\r\n",
         "    for l in range(1, L):\r\n",
-        "        Wb_matrix['W' + str(l)] = initializer(layer_dims[l], layer_dims[l-1])\r\n",
+        "        Wb_matrix['W' + str(l)] = initialize(initializer, layer_dims[l], layer_dims[l-1])\r\n",
         "        Wb_matrix['b' + str(l)] = np.zeros((layer_dims[l], 1))\r\n",
         "    \r\n",
         "    return Wb_matrix"
