Final tweaks in forward prop, started back prop

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -113,7 +113,7 @@
         "def relu(z):\r\n",
         "  return np.maximum(0,z)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
         "def softmax(x):\r\n",
         "  return np.exp(x)/np.sum(np.exp(x), axis = 0)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
         "\r\n",
         "  print(\"Enter the name of initializer correctly\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,13 +154,13 @@
         "id": "n6P2Su_1dv30"
       },
       "source": [
-        "def linear_forward(A, W, b, activation):\r\n",
-        "  Z = np.dot(W, A) + b \r\n",
-        "  cache = (A, W, b)\r\n",
+        "def linear_forward(H, W, b, activation):\r\n",
+        "  A = np.dot(W, H) + b \r\n",
+        "  cache = (H, W, b)\r\n",
         "\r\n",
-        "  return Z, cache"
+        "  return A, cache"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,18 +169,18 @@
         "id": "t7zsskSyU1ZO"
       },
       "source": [
-        "def activation_forward(A_prev, W, b, activation):\r\n",
-        "  Z, linear_cache = linear_forward(A_prev, W, b)\r\n",
-        "  activation_cache = Z \r\n",
+        "def activation_forward(H_prev, W, b, activation):\r\n",
+        "  A, linear_cache = linear_forward(H_prev, W, b)\r\n",
+        "  activation_cache = A\r\n",
         "  if activation == 'relu':\r\n",
-        "    A = relu(Z)\r\n",
+        "    H = relu(A)\r\n",
         "  elif activation == 'sigmoid':\r\n",
-        "    A = sigmoid(Z)\r\n",
+        "    H = sigmoid(A)\r\n",
         "  elif activation =='tanh':\r\n",
-        "    A = tanh(Z)\r\n",
+        "    H = tanh(A)\r\n",
         "  elif activation == 'softmax':\r\n",
-        "    A = softmax(Z)\r\n",
-        "  return A, activation_cache"
+        "    H = softmax(A)\r\n",
+        "  return H, activation_cache"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,19 +213,19 @@
       },
       "source": [
         "def L_layer_model(X, Wb_matrix, activation):\r\n",
-        "    A = X\r\n",
+        "    H = X\r\n",
         "    L = len(Wb_matrix) // 2\r\n",
-        "    caches = []\r\n",
-        "\r\n",
+        "    A_caches = []\r\n",
+        "    H_caches = [H]\r\n",
         "    for l in range(1, L):\r\n",
-        "        A_prev = A \r\n",
-        "        A, cache = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation)\r\n",
-        "        caches.append(cache)\r\n",
-        "\r\n",
-        "    AL, cache = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')\r\n",
-        "    caches.append(cache)\r\n",
-        "\r\n",
-        "    return AL, caches"
+        "        H_prev = H \r\n",
+        "        H, A_cache = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation)\r\n",
+        "        A_caches.append(A_cache)\r\n",
+        "        H_caches.append(H)\r\n",
+        "    HL, A_cache = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')\r\n",
+        "    A_caches.append(A_cache)\r\n",
+        "    H_caches.append(H_cache)\r\n",
+        "    return HL, H_caches, A_caches"
       ],
       "execution_count": null,
       "outputs": []
@@ -244,17 +244,103 @@
         "  layer_dims.append(10)\r\n",
         "  \r\n",
         "  Wb_matrix = initialize_Wb_matrix(layer_dims, initializer)\r\n",
-        "  AL, caches = L_layer_model(X, Wb_matrix, activation)\r\n",
+        "  y_hat, H_caches A_caches = L_layer_model(X, Wb_matrix, activation)\r\n",
         "\r\n",
-        "  return AL, caches"
+        "  return y_hat, H_caches, A_caches"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c6hlMq4saR14"
+      },
+      "source": [
+        "# Question 3 (18 Marks)\r\n",
+        "\r\n",
+        "Implement the backpropagation algorithm with support for the following optimisation functions \r\n",
+        "\r\n",
+        "- sgd\r\n",
+        "- momentum based gradient descent\r\n",
+        "- nesterov accelerated gradient descent\r\n",
+        "- rmsprop\r\n",
+        "- adam\r\n",
+        "- nadam\r\n",
+        "\r\n",
+        "(12 marks for the backpropagation framework and 2 marks for each of the optimisation algorithms above)\r\n",
+        "\r\n",
+        "We will check the code for implementation and ease of use (e.g., how easy it is to add a new optimisation algorithm such as Eve). Note that the code should be flexible enough to work with different batch sizes."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lXeoLIx6SVwB"
+      },
+      "source": [
+        "def backward_propagation(AL, Y, caches):\r\n",
+        "    grads = {}\r\n",
+        "    L = len(caches)\r\n",
+        "    m = AL.shape[1]\r\n",
+        "    Y = Y.reshape(AL.shape) \r\n",
+        "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\r\n",
+        "    current_cache = caches[L-1]\r\n",
+        "    grads[\"dA\" + str(L-1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, 'sigmoid')\r\n",
+        "    for l in reversed(range(L-1)):\r\n",
+        "        current_cache = caches[l]\r\n",
+        "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 1)], current_cache, 'relu')\r\n",
+        "        grads[\"dA\" + str(l)] = dA_prev_temp\r\n",
+        "        grads[\"dW\" + str(l + 1)] = dW_temp\r\n",
+        "        grads[\"db\" + str(l + 1)] = db_temp\r\n",
+        "    return grads\r\n",
+        "\r\n",
+        "\r\n",
+        "def linear_activation_backward(dA, cache, activation):\r\n",
+        "\r\n",
+        "    linear_cache, activation_cache = cache\r\n",
+        "    \r\n",
+        "    if activation == \"relu\":\r\n",
+        "        ### START CODE HERE ### (≈ 2 lines of code)\r\n",
+        "        dZ = relu_backward(dA, activation_cache)\r\n",
+        "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\r\n",
+        "        ### END CODE HERE ###\r\n",
+        "        \r\n",
+        "    elif activation == \"sigmoid\":\r\n",
+        "        ### START CODE HERE ### (≈ 2 lines of code)\r\n",
+        "        dZ = sigmoid_backward(dA, activation_cache)\r\n",
+        "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\r\n",
+        "        ### END CODE HERE ###\r\n",
+        "    \r\n",
+        "    return dA_prev, dW, db"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1b3Qc4pcN2iD"
+      },
+      "source": [
+        "def one_hot_encoding(l, L):\r\n",
+        "  e_y = []\r\n",
+        "\r\n",
+        "  for i in range(L):\r\n",
+        "    if i == l:\r\n",
+        "      e_y.append(1)\r\n",
+        "    else:\r\n",
+        "      e_y.append(0)\r\n",
+        "  \r\n",
+        "  return np.array(e_y)"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XGp9a-HAVJaZ"
       },
       "source": [
         ""
