SGD and Momentum implemented

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -180,7 +180,8 @@
         "    H = tanh(A)\r\n",
         "  elif activation == 'softmax':\r\n",
         "    H = softmax(A)\r\n",
-        "  return H, activation_cache"
+        "\r\n",
+        "  return H, activation_cache, linear_cache"
       ],
       "execution_count": null,
       "outputs": []
@@ -219,12 +220,11 @@
         "    H_caches = [H]\r\n",
         "    for l in range(1, L):\r\n",
         "        H_prev = H \r\n",
-        "        H, A_cache = activation_forward(A_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation)\r\n",
+        "        H, A_cache, linear_cache = activation_forward(H_prev, Wb_matrix['W{:d}'.format(l)], Wb_matrix['b{:d}'.format(l)], activation)\r\n",
         "        A_caches.append(A_cache)\r\n",
         "        H_caches.append(H)\r\n",
         "    HL, A_cache = activation_forward(A, Wb_matrix['W%d' % L], Wb_matrix['b%d' % L], activation='softmax')\r\n",
         "    A_caches.append(A_cache)\r\n",
-        "    H_caches.append(H_cache)\r\n",
         "    return HL, H_caches, A_caches"
       ],
       "execution_count": null,
@@ -276,50 +276,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lXeoLIx6SVwB"
-      },
-      "source": [
-        "def backward_propagation(AL, Y, caches):\r\n",
-        "    grads = {}\r\n",
-        "    L = len(caches)\r\n",
-        "    m = AL.shape[1]\r\n",
-        "    Y = Y.reshape(AL.shape) \r\n",
-        "    dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\r\n",
-        "    current_cache = caches[L-1]\r\n",
-        "    grads[\"dA\" + str(L-1)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_activation_backward(dAL, current_cache, 'sigmoid')\r\n",
-        "    for l in reversed(range(L-1)):\r\n",
-        "        current_cache = caches[l]\r\n",
-        "        dA_prev_temp, dW_temp, db_temp = linear_activation_backward(grads[\"dA\" + str(l + 1)], current_cache, 'relu')\r\n",
-        "        grads[\"dA\" + str(l)] = dA_prev_temp\r\n",
-        "        grads[\"dW\" + str(l + 1)] = dW_temp\r\n",
-        "        grads[\"db\" + str(l + 1)] = db_temp\r\n",
-        "    return grads\r\n",
-        "\r\n",
-        "\r\n",
-        "def linear_activation_backward(dA, cache, activation):\r\n",
-        "\r\n",
-        "    linear_cache, activation_cache = cache\r\n",
-        "    \r\n",
-        "    if activation == \"relu\":\r\n",
-        "        ### START CODE HERE ### (≈ 2 lines of code)\r\n",
-        "        dZ = relu_backward(dA, activation_cache)\r\n",
-        "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\r\n",
-        "        ### END CODE HERE ###\r\n",
-        "        \r\n",
-        "    elif activation == \"sigmoid\":\r\n",
-        "        ### START CODE HERE ### (≈ 2 lines of code)\r\n",
-        "        dZ = sigmoid_backward(dA, activation_cache)\r\n",
-        "        dA_prev, dW, db = linear_backward(dZ, linear_cache)\r\n",
-        "        ### END CODE HERE ###\r\n",
-        "    \r\n",
-        "    return dA_prev, dW, db"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "1b3Qc4pcN2iD"
       },
       "source": [
@@ -334,7 +290,29 @@
         "  \r\n",
         "  return np.array(e_y)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M6UpazPvcV6c"
+      },
+      "source": [
+        "def deriv_activ(z, activation):\r\n",
+        "  if(activation == \"relu\"):\r\n",
+        "    x[x<=0] = 0\r\n",
+        "    x[x>0] = 1\r\n",
+        "    return x\r\n",
+        "\r\n",
+        "  elif(activation == \"sigmoid\"):\r\n",
+        "    g_deriv = sigmoid(z) * (1 - sigmoid(z))\r\n",
+        "    return g_deriv\r\n",
+        "  \r\n",
+        "  elif(activation == \"tanh\"):\r\n",
+        "    deriv = 1 - (tanh(z)) ** 2"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -343,7 +321,46 @@
         "id": "XGp9a-HAVJaZ"
       },
       "source": [
-        ""
+        "def back_propagation(H_caches, A_caches, Wb_matrix, y_hat, y, activation):\r\n",
+        "  e_y = one_hot_encoding(y, L)\r\n",
+        "  da = -(e_y - y_hat)\r\n",
+        "  grads = {}\r\n",
+        "\r\n",
+        "  for k in reversed(range(1, L+1)):\r\n",
+        "    dW = np.dot(da, H_caches[k-1].T)\r\n",
+        "    db = da\r\n",
+        "    dh = np.dot(Wb_matrix['W{:d}'.format(k)].T, da)\r\n",
+        "    da = np.multiply(dh, deriv_activ(A_caches[k-1], activation))\r\n",
+        "    grads[\"dW\" + str(k)] = dW\r\n",
+        "    grads[\"db\" + str(k)] = db\r\n",
+        "  \r\n",
+        "  return dW_caches, db_caches"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l16UXHD_YsCH"
+      },
+      "source": [
+        "def sgd(Wb_matrix, grads, eta):\r\n",
+        "  for l in range(L):\r\n",
+        "    Wb_matrix[\"W\" + str(l+1)] = Wb_matrix[\"W\" + str(l+1)] - eta * grads[\"dW\" + str(l+1)]\r\n",
+        "    Wb_matrix[\"b\" + str(l+1)] = Wb_matrix[\"b\" + str(l+1)] - eta * grads[\"db\" + str(l+1)]\r\n",
+        "  return Wb_matrix\r\n",
+        "\r\n",
+        "def momentum(Wb_matrix, grads, eta, gamma, update):\r\n",
+        "  update_new = {}\r\n",
+        "  for l in range(L):\r\n",
+        "    update_new[\"W\" + str(l+1)] = (gamma * update[\"W\" + str(l+1)]) + eta * grads[\"dW\" + str(l+1)]\r\n",
+        "    Wb_matrix[\"W\" + str(l+1)] = Wb_matrix[\"W\" + str(l+1)] - update_new[\"W\" + str(l+1)]\r\n",
+        "\r\n",
+        "    update_new[\"b\" + str(l+1)] = (gamma * update[\"b\" + str(l+1)]) + eta * grads[\"db\" + str(l+1)]\r\n",
+        "    Wb_matrix[\"b\" + str(l+1)] = Wb_matrix[\"b\" + str(l+1)] - update_new[\"b\" + str(l+1)]\r\n",
+        "  \r\n",
+        "  return Wb_matrix, update_new"
       ],
       "execution_count": null,
       "outputs": []
